# JohnStrunk-_-advent-of-ai-2025

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: solve-puzzle
.devcontainer/: devcontainer.json
.github/: lint-all.sh  markdownlint-config.yaml  mergify.yml  renovate.json5  update-copilot-instructions.sh
.github/instructions/: markdown.instructions.md  pre-commit.instructions.md  python-project.instructions.md  python.instructions.md  skills.instructions.md  update-skills.py
.github/prompts/: enhance-instructions.prompt.md  feature.prompt.md  madr.prompt.md  solve-puzzle.prompt.md
.github/skills/dad-joke/: SKILL.md
.github/skills/solve-puzzle/: SKILL.md
.github/skills/superpowers/: README.md
.github/skills/superpowers/finishing-a-development-branch/: SKILL.md
.github/skills/superpowers/systematic-debugging/: SKILL.md
.github/skills/superpowers/test-driven-development/: SKILL.md
.github/workflows/: ci-workflow.yaml  copilot-setup-steps.yaml
day01/: README.md  __init__.py  part1.py  part2.py  puzzle-part2.txt  puzzle.txt  test_part1.py  test_part2.py
day02/: __init__.py  part1.py  part2.py  puzzle-part1.txt  puzzle-part2.txt  test_part1.py  test_part2.py
day03/: __init__.py  part1.py  part2.py  puzzle-part2.txt  test_part1.py  test_part2.py
day04/: README.md  __init__.py  part1.py  part2.py  test_part1.py  test_part2.py
day05/: README.md  __init__.py  part1.py  part2.py  test_part1.py  test_part2.py
day06/: README.md  __init__.py  part1.py  part2.py  puzzle-part1.txt  puzzle-part2.txt  test_part1.py  test_part2.py
day07/: README.md  __init__.py  input.txt  part1.py  part2.py  puzzle-part1.txt  puzzle-part2.txt  test_part1.py  test_part2.py
day08/: README.md  __init__.py  part1.py  part2.py  puzzle-part2.txt  test_part1.py  test_part2.py
day09/: README.md  __init__.py  part1.py  part2.py  puzzle-part1.txt  puzzle-part2.txt  test_part1.py  test_part2.py
day10/: README.md  __init__.py  part1.py  part2.py  test_part1.py  test_part2.py
day11/: README.md  part1.py  part2.py  test_part2.py
design/: 0001-madr-linting-requirements-for-all.md  README.md  new-record.sh
docs/plans/: 2025-12-15-day09-part2-optimization-design.md
(+3 files in other folders)
